Upgrade test-distribution plugin