@@ -23,11 +23,6 @@ tasks.withType<Test>().configureEach {
 		maxLocalExecutors.set(providers.gradleProperty("testDistribution.maxLocalExecutors").map(String::toInt).orElse(1))
 		maxRemoteExecutors.set(providers.gradleProperty("testDistribution.maxRemoteExecutors").map(String::toInt))
 	}
-	jvmArgs( // Temporary workaround until next test-distribution plugin patch release
-		"--add-opens", "java.base/java.lang=ALL-UNNAMED",
-		"--add-opens", "java.base/java.util=ALL-UNNAMED",
-		"--add-opens", "java.base/java.nio=ALL-UNNAMED"
-	)
 	systemProperty("java.util.logging.manager", "org.apache.logging.log4j.jul.LogManager")
 	// Required until ASM officially supports the JDK 14
 	systemProperty("net.bytebuddy.experimental", true)
